T Compiler/tests/phase3tests/error/newRuntimeError.t
class A
{
  int i;
}

int main()
{
  A a;

  while (1)
  {
    a = new A();
  }
}
   
